Mon Sep 15 15:18:03 2003  George Lebl <jirka@5z.com>

	* gkb-applet.c: when started in lockdown mode, hide the preferences
	  item

2003-08-24  Irene Ryan <irene.ryan@sun.com>

	* help/C/gkb.xml, gkb-C.omf: updates to the Help for the GNOME 2.4 release
	* help/C/gkb_applet.png: new screenshot

2003-07-26  Kevin Vandersloot

	* descs/German.keyprop.in: The keymap shoudld be de not sg. Patch
	from flight debian org. Fixes bug #117666

2003-07-23  Kevin Vandersloot

	* schemas.in: clean up strings

2003-07-21  Dennis Cranston <dennis_cranston at yahoo com>

	* prop.c, prop-add.c, prop-map.c:  HIGify widget padding between 
	the vbox and action area of the dialog.  Thanks to <chris@gnome-de.org>
	Christian - Manny Calavera - Neumair.

Thu Jul 10 11:54:12 2003  George Lebl <jirka@5z.com>

	* gconf.c, gkb.[ch], prop.c: Respect key writability, even though
	  it's a bit of an overkill in the way it works.  Basically for the
	  list of keyboards, if any key is not writable, you can't change
	  anything.  This is really because of the way it works, it should
	  work more like the panel.  But oh well.

	* prop-add.c: Fix memory leak, fix crash on window display, correctly
	  sensitize the add button.

2003-06-29  Kevin Vandersloot

	* prop-add.c: Fix adding keymaps to the tree.

2003-06-18  Kaushal Kumar <kaushal.kumar@wipro.com>

	* prop-map.c (gkb_prop_map_close_clicked) : Have default values 
	for Name and Label when left empty. Fixes bug #115269.
	Fixed few memory leaks. 

2003-06-12  Dennis Cranston <dennis_cranston at yahoo com>

	* prop.c:  HIG'ify the options tab again as per the
	HIG, "Do not assign access keys to tab labels".

2003-06-12  Jody Goldberg <jody@gnome.org>

	* switcher.c (gkb_button_press_event_cb) : delete more unused code.

	* prop-add.c (lang_data_free) : new.
	(country_data_free) : new.
	(tree_create) : avoid massive leak, and re-org to be sane.
	(comparefunc) : fix to always return something.

2003-06-12  Jody Goldberg <jody@gnome.org>
