@@ -1,3 +1,8 @@
+Tue Sep 16 16:38:04 2003  George Lebl <jirka@5z.com>
+
+	* prop-map.c: the command entry in the edit map dialog needs to
+	  be disabled if the command line is being inhibited.
+
 Mon Sep 15 15:18:03 2003  George Lebl <jirka@5z.com>
 
 	* gkb-applet.c: when started in lockdown mode, hide the preferences
